# wall_follower

./: CMakeLists.txt  LICENSE  README.md  package.xml  server_with_map_and_gui_plus_robot.launch  server_with_map_gui_and_2_simplex.launch  server_with_map_inverted_gui_and_2_simplex.launch  simplex.launch
resources/maps/: v.yaml  v_inv.yaml  w.yaml  w_inv.yaml
resources/robots/: simplex.yaml
src/: avoid_wall.py  simplex.py
