<?xml version="1.0"?>
<package format="2">
  <name>ROBO</name>
  <version>0.0.0</version>
  <description>Project for ROBO at FEUP</description>

  <maintainer email="diogohmcruz@hotmail.com">bluedi</maintainer>

  <license>MIT</license>

  <author email="diogohmcruz@hotmail.com">Diogo Cruz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export></export>
</package>
